# polyglot-ai-team

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  config.json  feishu_bridge.py  feishu_listener.py  history.json  monitor.py  pdf_content.txt  pdf_content_v2.txt  polyglot-ai-team-dev-plan-v5.txt  polyglot-main-agent-no-extra-llm-styled.txt  polyglot.bat  polyglot_agents.example.json  polyglot_cli.py  polyglot_mcp_server.py  pyproject.toml  replay.py  start_feishu.ps1  status.py  steer.py
docs/: development-log.md  prompt_compression_rule.md
docs/research/: claude-fable5-reference-notes.md  open-source-fusion.md
outputs/: auto_run.py
polyglot_ai/: agents.py  handoff.py  main_agent.py  meta_planner.py  runtime.py  skill_compound.py  sync_notion.py  task_board.py  task_packet.py  test_meta_planner.py  test_skill_compound.py  v0_planner.py  v0_worker.py  v1_worker.py  worker_adapters.py
scratch/: pdf_extract.txt  run_phase_3_5_test.py
skills/: README.md  cli_no_edit_recovery.md  date_diff_pitfalls.md  traceback_to_fix_prompt.md
skills/polyglot-team-os/: SKILL.md
skills/polyglot-team-os/agents/: openai.yaml
skills/polyglot-team-os/references/: host-integration.md  runtime-capabilities.md
skills/polyglot-team-os/scripts/: polyglot_skill_bridge.py
