[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-ai-team"
version = "2.0.0"
description = "Local-first AI team runtime with MCP surface — Host-first, token-efficient, structured coordination."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Polyglot AI Team"}
]
keywords = [
    "ai-agent", "claude-code", "model-context-protocol", "mcp",
    "local-agents", "team-orchestration", "polyglot", "codex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=4.0",
]

[project.scripts]
polyglot = "polyglot_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polyglot_ai*"]

[tool.pytest.ini_options]
testpaths = ["polyglot_ai"]
python_files = ["test_*.py"]
python_functions = "test_*"
addopts = "-q --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
